// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NormalTextField /> should not show error color when not have any error message 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root makeStyles-root-17 makeStyles-root-21"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root makeStyles-cssLabel-15 makeStyles-cssLabel-19 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
      style="font-size: 1rem;"
    >
      Test
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-fontColor-16 makeStyles-fontColor-20 MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart"
      style="font-size: 1rem;"
    >
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionStart"
      />
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart"
        type="text"
        value="Value"
      />
    </div>
  </div>
</div>
`;

exports[`<NormalTextField /> should show error color when errorMessage is available 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root makeStyles-root-10 makeStyles-root-14"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root makeStyles-cssLabel-8 makeStyles-cssLabel-12 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink Mui-error Mui-error MuiFormLabel-filled"
      data-shrink="true"
      style="font-size: 1rem;"
    >
      Test
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-fontColor-9 makeStyles-fontColor-13 Mui-error Mui-error MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart"
      style="font-size: 1rem;"
    >
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionStart"
      />
      <input
        aria-invalid="true"
        class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart"
        type="text"
        value="Value"
      />
    </div>
    <p
      class="MuiFormHelperText-root Mui-error MuiFormHelperText-filled"
    >
      error message
    </p>
  </div>
</div>
`;
